# puregit

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  ROADMAP.md
.github/workflows/: ci.yml
src/: compress.rs  config.rs  diff.rs  error.rs  hash.rs  index.rs  lib.rs  merge.rs  oid.rs  refs.rs  repository.rs  status.rs  tree_builder.rs  walk.rs  worktree.rs
src/client/: mod.rs
src/lfs/: attributes.rs  batch.rs  json.rs  mod.rs  pointer.rs  store.rs  transfer.rs
src/object/: commit.rs  mod.rs  signature.rs  tag.rs  tree.rs
src/odb/: combined.rs  loose.rs  memory.rs  mod.rs
src/pack/: delta.rs  mod.rs  writer.rs
src/protocol/: capabilities.rs  mod.rs  pktline.rs
src/server/: daemon.rs  http.rs  lfs.rs  mod.rs
src/transport/: http.rs  mod.rs  ssh.rs
src/vfs/: mod.rs  std_impl.rs
